实现deployment的升级暂停/恢复,daemonset版本管理以及版本回滚
